# frontend/openapi.yaml
@@ -1816,6 +1816,24 @@ paths:
         schema:
           type: integer
           format: int64
+      - name: pageNum
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+      - name: pageSize
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+      - name: sortOrder
+        in: query
+        required: false
+        schema:
+          type: string
+          default: desc
       responses:
         "200":
           description: OK
